✨ 实现Profiles/Settings API
